Added Real life inspo

--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -113,7 +113,71 @@
                        The anime further brings the GT-R’s legendary status to life, highlighting its
                         formidable acceleration and control, which contrast with lighter cars like the AE86.</p>
             </div>
-        </div>
+
+            <div class="gridElementReal">
+                <h2>Real Life</h2>
+                <img src="assets/Images/RealLifeInspo/usui_real.jpeg" alt="" class="columnImage">
+            </div>
+            <div class="gridElementManga">
+                <h2>Manga</h2>
+                <img src="assets/Images/RealLifeInspo/usui_manga.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridElementAnime">
+                <h2>Anime</h2>
+                <img src="assets/Images/RealLifeInspo/usui_anime.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridText">
+                <p><b>Usui Pass</b>, modeled after the real-life Mount Myogi, is notorious for its sharp
+                     curves and is a popular location for real-life touge (mountain pass) races.
+                      In the manga, it’s depicted as a challenging course for even the best drivers, 
+                      testing precision and patience. The anime’s adaptation captures its intense twists 
+                      and elevation changes, amplifying the tension as cars drift dangerously close to the 
+                      cliff edges.</p>
+            </div>
+
+            <div class="gridElementReal">
+                <h2>Real Life</h2>
+                <img src="assets/Images/RealLifeInspo/eg6_real.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridElementManga">
+                <h2>Manga</h2>
+                <img src="assets/Images/RealLifeInspo/eg6_manga.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridElementAnime">
+                <h2>Anime</h2>
+                <img src="assets/Images/RealLifeInspo/eg6_anime.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridText">
+                <p>The <b>Honda Civic EG6</b> is a classic, practical street-racing car, valued in real
+                     life for its lightweight body and modifiability. In the manga, it’s used by
+                      street racers seeking a balance of speed and control. The anime highlights 
+                      its agility, contrasting its performance with other cars like the RX-7 and
+                       GT-R, showcasing how a well-tuned Civic can compete with more powerful machines.</p>
+            </div>
+
+            <div class="gridElementReal">
+                <h2>Real Life</h2>
+                <img src="assets/Images/RealLifeInspo/night_real.avif" alt="" class="columnImage">
+            </div>
+            <div class="gridElementManga">
+                <h2>Manga</h2>
+                <img src="assets/Images/RealLifeInspo/night_manga.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridElementAnime">
+                <h2>Anime</h2>
+                <img src="assets/Images/RealLifeInspo/night_anime.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridText">
+                <p><b>Night racing</b> on Japan’s mountain roads brings a sense of mystery and thrill,
+                     echoed in real-life street racing where secrecy is part of the culture. In the
+                      manga, the night setting intensifies the atmosphere, with headlights slicing
+                       through darkness to emphasize the isolation of each racer. The anime expands 
+                       on this with glowing city lights and sweeping shots that bring the night racing
+                        scene to life, building suspense with every twist and turn.
+
+                </p>
+            </div>
+        </div>  
     </main>
 
 </body>
