Inspiration from real life page
Finished the page

--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -177,6 +177,72 @@
 
                 </p>
             </div>
+
+            <div class="gridElementReal">
+                <h2>Real Life</h2>
+                <img src="assets/Images/RealLifeInspo/s13_real.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridElementManga">
+                <h2>Manga</h2>
+                <img src="assets/Images/RealLifeInspo/S13_Manga.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridElementAnime">
+                <h2>Anime</h2>
+                <img src="assets/Images/RealLifeInspo/s13_anime.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridText">
+                <p>The <b>Nissan Silvia S13</b> is a popular choice in Japanese street racing,
+                     known for its rear-wheel drive and ease of modification. In Initial D, 
+                     it’s driven by various racers who appreciate its balance of speed and control.
+                      The anime further highlights the Silvia’s versatility, presenting it as a
+                       steady rival to more specialized cars on mountain passes.
+
+                </p>
+            </div>
+
+            <div class="gridElementReal">
+                <h2>Real Life</h2>
+                <img src="assets/Images/RealLifeInspo/akina_real.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridElementManga">
+                <h2>Manga</h2>
+                <img src="assets/Images/RealLifeInspo/akina_manga.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridElementAnime">
+                <h2>Anime</h2>
+                <img src="assets/Images/RealLifeInspo/akina_anime.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridText">
+                <p><b>Mount Akina</b>, based on the real Mount Haruna in Gunma Prefecture, is celebrated among
+                     car enthusiasts for its hairpin turns and elevation changes. In the manga, this road
+                      is central to Takumi’s skill development, providing a realistic, challenging setting. 
+                      The anime builds on this by capturing the suspense of drifting through tight corners,
+                       amplifying the risks and rewards of racing on such a challenging mountain.
+
+                </p>
+            </div>
+
+            <div class="gridElementReal">
+                <h2>Real Life</h2>
+                <img src="assets/Images/RealLifeInspo/impreza_real.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridElementManga">
+                <h2>Manga</h2>
+                <img src="assets/Images/RealLifeInspo/impreza_manga.webp" alt="" class="columnImage">
+            </div>
+            <div class="gridElementAnime">
+                <h2>Anime</h2>
+                <img src="assets/Images/RealLifeInspo/impreza_anime.jpg" alt="" class="columnImage">
+            </div>
+            <div class="gridText">
+                <p>The <b>Subaru Impreza WRX STI GC8</b> , known for its turbocharged engine and all-wheel drive, 
+                    is celebrated in real life for its rally racing success and reliability on rough terrain.
+                     In the manga, it’s introduced as a powerful contrast to lighter, rear-wheel-drive cars
+                      like the AE86. The anime portrays the WRX’s superior grip and power, showcasing its 
+                      ability to handle mountain roads with speed and stability.
+
+                </p>
+            </div>
         </div>  
     </main>
 
