--- a/gallery.html
+++ b/gallery.html
@@ -15,30 +15,28 @@
 </head>
 <body>
     <header>
-    <nav>
-        <ul class="menu">
-            <img class="logo" src="assets/Images/initial-d-logo.png" alt="">
-            <li>
-                <a href="index.html">Home</a></li>
-            <li>
-                <a href="real_life_inspiration.html">Real Life Inspiration</a>
-            </li>
-            <li>
-                <a href="map_courses.html">Map and Courses</a>
-                <ul class="dropdown">
-                    <li><a href="map_courses.html#Akina">Akina</a></li>
-                    <li><a href="map_courses.html#Gunma">Gunma</a></li>
-                    <li><a href="#">Exc</a></li>
-                    <li><a href="#">Exc</a></li>
-                    
-                </ul>
-            </li>
-            <li>
-                <a href="cars_characters.html">Cars and Characters</a>
-            </li>
-            <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul class="menu">
+                <img class="logo" src="assets/Images/initial-d-logo.png" alt="">
+                <li>
+                    <a href="index.html">Home</a></li>
+                <li>
+                    <a href="real_life_inspiration.html">Real Life Inspiration</a>
+                    <ul class="dropdown">
+                        <li><a href="real_life_inspiration.html#Ae86">AE86 Trueno</a></li>
+                        <li><a href="real_life_inspiration.html#rx7">RX-7 FD3S</a></li>
+                        <li><a href="real_life_inspiration.html#r32">GT-R R32</a></li>
+                        <li><a href="real_life_inspiration.html#usui">Usui Pass</a></li>
+                        <li><a href="real_life_inspiration.html#eg6">Civic EG6</a></li>
+                        <li><a href="real_life_inspiration.html#night">Night racing</a></li>
+                        <li><a href="real_life_inspiration.html#s13">Silvia S13</a></li>
+                        <li><a href="real_life_inspiration.html#akina">Mount Akina</a></li>
+                        <li><a href="real_life_inspiration.html#impreza">Impreza</a></li>
+                    </ul>
+                </li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1>Gallery - Initial D Pics and Vids</h1>
@@ -93,5 +91,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        Page made by Marius Manea. All rights reserved to Initial D franchise.
+    </footer>
 </body>
 </html>
