--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -23,19 +23,17 @@
                     <a href="index.html">Home</a></li>
                 <li>
                     <a href="real_life_inspiration.html">Real Life Inspiration</a>
-                </li>
-                <li>
-                    <a href="map_courses.html">Map and Courses</a>
                     <ul class="dropdown">
-                        <li><a href="map_courses.html#Akina">Akina</a></li>
-                        <li><a href="map_courses.html#Gunma">Gunma</a></li>
-                        <li><a href="#">Exc</a></li>
-                        <li><a href="#">Exc</a></li>
-                        
+                        <li><a href="real_life_inspiration.html#Ae86">AE86 Trueno</a></li>
+                        <li><a href="real_life_inspiration.html#rx7">RX-7 FD3S</a></li>
+                        <li><a href="real_life_inspiration.html#r32">GT-R R32</a></li>
+                        <li><a href="real_life_inspiration.html#usui">Usui Pass</a></li>
+                        <li><a href="real_life_inspiration.html#eg6">Civic EG6</a></li>
+                        <li><a href="real_life_inspiration.html#night">Night racing</a></li>
+                        <li><a href="real_life_inspiration.html#s13">Silvia S13</a></li>
+                        <li><a href="real_life_inspiration.html#akina">Mount Akina</a></li>
+                        <li><a href="real_life_inspiration.html#impreza">Impreza</a></li>
                     </ul>
-                </li>
-                <li>
-                    <a href="cars_characters.html">Cars and Characters</a>
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
@@ -54,7 +52,7 @@
               culture of Japanese street racing, comparing the 3 different types of media directly.</p>
 
         <div class="gridContainer">
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="Ae86">
                 <h2>Real Life</h2>
                 <img class="columnImage" src="assets/Images/RealLifeInspo/takumi-fujiwara-initial-d-ae86.jpg" alt="">
             </div>
@@ -74,7 +72,7 @@
                        the underdog vehicle a hero for fans worldwide.</p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="rx7">
                 <h2>Real Life</h2>
                 <img class="columnImage" src="assets/Images/RealLifeInspo/rx7_real.jpeg" alt="">
             </div>
@@ -94,7 +92,7 @@
                       with bold visuals and sound effects that emphasize its aggressive style on the road.</p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="r32">
                 <h2>Real Life</h2>
                 <img src="assets/Images/RealLifeInspo/r32_real.jpg" alt="" class="columnImage">
             </div>
@@ -114,7 +112,7 @@
                         formidable acceleration and control, which contrast with lighter cars like the AE86.</p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="usui">
                 <h2>Real Life</h2>
                 <img src="assets/Images/RealLifeInspo/usui_real.jpeg" alt="" class="columnImage">
             </div>
@@ -135,7 +133,7 @@
                       cliff edges.</p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="eg6">
                 <h2>Real Life</h2>
                 <img src="assets/Images/RealLifeInspo/eg6_real.jpg" alt="" class="columnImage">
             </div>
@@ -155,7 +153,7 @@
                        GT-R, showcasing how a well-tuned Civic can compete with more powerful machines.</p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="night">
                 <h2>Real Life</h2>
                 <img src="assets/Images/RealLifeInspo/night_real.avif" alt="" class="columnImage">
             </div>
@@ -178,7 +176,7 @@
                 </p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="s13">
                 <h2>Real Life</h2>
                 <img src="assets/Images/RealLifeInspo/s13_real.jpg" alt="" class="columnImage">
             </div>
@@ -200,7 +198,7 @@
                 </p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="akina">
                 <h2>Real Life</h2>
                 <img src="assets/Images/RealLifeInspo/akina_real.jpg" alt="" class="columnImage">
             </div>
@@ -222,7 +220,7 @@
                 </p>
             </div>
 
-            <div class="gridElementReal">
+            <div class="gridElementReal" id="impreza">
                 <h2>Real Life</h2>
                 <img src="assets/Images/RealLifeInspo/impreza_real.jpg" alt="" class="columnImage">
             </div>
@@ -245,6 +243,8 @@
             </div>
         </div>  
     </main>
-
+    <footer>
+        Page made by Marius Manea. All rights reserved to Initial D franchise.
+    </footer>
 </body>
 </html>
