Update footer text for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
     </main>
     <footer>
-        Page made by Marius Manea. All rights reserved to Initial D franchise.
+        Page created by Marius Manea. All rights reserved to the Initial D franchise.
     </footer>
 </body>
 </html>
