--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,8 @@
                     </ul>
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="sign_up.html">Sign Up</a></li>
+
             </ul>
         </nav>
     </header>
