--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
+
 </head>
 <body>
     <header>
@@ -35,6 +36,8 @@
                 </ul>
             </li>
             <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="sign_up.html">Sign Up</a></li>
+
         </ul>
     </nav>
     </header>
