--- a/map_courses.html
+++ b/map_courses.html
@@ -38,6 +38,7 @@
                     <a href="cars_characters.html">Cars and Characters</a>
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="sign_up.html">Sign Up</a></li>
             </ul>
         </nav>
         </header>
