--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -36,6 +36,7 @@
                     </ul>
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="sign_up.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
