Add Eurobeat page and link in navigation menu; implement character selection in sign-up form

--- a/cars_characters.html
+++ b/cars_characters.html
@@ -36,6 +36,7 @@
                 <li>
                     <a href="cars_characters.html">Cars and Characters</a>
                 </li>
+                <li><a href="eurobeat.html">Eurobeat</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
 
