--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -35,6 +35,7 @@
                         <li><a href="real_life_inspiration.html#impreza">Impreza</a></li>
                     </ul>
                 </li>
+                <li><a href="eurobeat.html">Eurobeat</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
             </ul>
