Enhance Eurobeat page layout and functionality: adjust margins, update song descriptions, and implement dynamic song rendering

--- a/eurobeat.html
+++ b/eurobeat.html
@@ -44,14 +44,14 @@
     </header>
     <main>
         <h1>Eurobeat - Initial D's Soundtrack</h1>
-        <h2>Eurobeat is a high-energy electronic music genre that plays a pivotal role in <i>Initial D</i>, amplifying
+        <p>Eurobeat is a high-energy electronic music genre that plays a pivotal role in <i>Initial D</i>, amplifying
         the intensity of its iconic racing scenes and defining the anime's distinct atmosphere. Originating in Europe
         and gaining immense popularity in Japan, eurobeat is characterized by fast-paced beats, catchy melodies, and vibrant
         vocals. Each important scene in <i>Initial D</i> is paired with a memorable eurobeat track, making it easy to associate key moments
         with their signature songs. Hits like "Running in the 90s" and "Deja Vu" have become synonymous with the series, 
-        cementing eurobeat as an integral part of <i>Initial D’s</i> legacy and fan appeal.</h2>
+        cementing eurobeat as an integral part of <i>Initial D’s</i> legacy and fan appeal.</p>
         <div class="container">
-            <div class="songsLeft">
+            <div class="songsLeft" id="songsLeftContainer">
                 <div class="song">
                     <img src="assets/Images/playbutton.png" alt="">
                     <div class="songDescription">
@@ -63,7 +63,7 @@
             <div class="video">
                 <video loop controls autoplay src="assets/Videos/running in the 90s.mp4"></video>
             </div>
-            <div class="songsRight">
+            <div class="songsRight" id="songsRightContainer">
                 <div class="song">
                     <img src="assets/Images/playbutton.png" alt="">
                     <div class="songDescription">
