Add video support and enhance song selection functionality: include new songs, update video sources, and implement dynamic song highlighting

--- a/eurobeat.html
+++ b/eurobeat.html
@@ -52,25 +52,13 @@
         cementing eurobeat as an integral part of <i>Initial D’s</i> legacy and fan appeal.</p>
         <div class="container">
             <div class="songsLeft" id="songsLeftContainer">
-                <div class="song">
-                    <img src="assets/Images/playbutton.png" alt="">
-                    <div class="songDescription">
-                        <p>Running in the 90s</p>
-                        <small>AE86 Trueno vs Nissan R32</small>
-                    </div>
-                </div>
+                
             </div>
             <div class="video">
-                <video loop controls autoplay src="assets/Videos/running in the 90s.mp4"></video>
+                <video id="videoM" loop controls autoplay src="assets/Videos/running in the 90s.mp4"></video>
             </div>
             <div class="songsRight" id="songsRightContainer">
-                <div class="song">
-                    <img src="assets/Images/playbutton.png" alt="">
-                    <div class="songDescription">
-                        <p>Running in the 90s</p>
-                        <small>AE86 Trueno vs Nissan R32</small>
-                    </div>
-                </div>
+               
             </div>
         </div>
 
