--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
+    <script src="scripts/dark_mode.js"></script>
+
 </head>
 <body>
     <header>
@@ -37,6 +39,7 @@
                 <li><a href="eurobeat.html">Eurobeat</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
+                <input type="button" value="Toggle Dark Mode" id="darkModeButton" onclick="toggleDarkMode()">
 
             </ul>
         </nav>
