--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/real_life_inspiration.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
+    <script src="scripts/dark_mode.js"></script>
+
 </head>
 <body>
     <header>
@@ -38,6 +40,8 @@
                 <li><a href="eurobeat.html">Eurobeat</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
+                <input type="button" value="Toggle Dark Mode" id="darkModeButton" onclick="toggleDarkMode()">
+
             </ul>
         </nav>
     </header>
