--- a/sign_up.html
+++ b/sign_up.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/sign_up.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <script src="scripts/sign_up.js"></script>
+    <script src="scripts/dark_mode.js"></script>
+
 </head>
 <body>
     <header>
@@ -39,6 +41,8 @@
                 <li><a href="eurobeat.html">Eurobeat</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
+                <input type="button" value="Toggle Dark Mode" id="darkModeButton" onclick="toggleDarkMode()">
+
             </ul>
         </nav>
     </header>
