Add random quote feature and menu script; update HTML and CSS for quote styling

--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <script src="scripts/dark_mode.js"></script>
+    <script src="scripts/menu.js"></script>
+    <script src="scripts/randomquote.js"></script>
 
 </head>
 <body>
