--- a/eurobeat.html
+++ b/eurobeat.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <script src="scripts/eurobeat.js"></script>
     <script src="scripts/dark_mode.js"></script>
-
+    <script src="scripts/menu.js"></script>
+    <script src="scripts/randomquote.js"></script>
 
 </head>
 <body>
