--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <script src="scripts/dark_mode.js"></script>
+    <script src="scripts/menu.js"></script>
+    <script src="scripts/randomquote.js"></script>
 
 </head>
 <body>
