--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="css/real_life_inspiration.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <script src="scripts/dark_mode.js"></script>
-
+    <script src="scripts/menu.js"></script>
+    <script src="scripts/randomquote.js"></script>
 </head>
 <body>
     <header>
