--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
-    <script src="scripts/dark_mode.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/randomquote.js"></script>
+    <script src="scripts/dark_mode.js"></script>
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@v0.163.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@v0.163.0/examples/jsm/"
+        }
+      }   
+    </script>
 
 </head>
 <body>
@@ -47,7 +56,8 @@
     </header>
     <main>
         <h1 class="card">Home</h1>
-
+        <div id="3d-container"></div>
+        <script type="module" src="scripts/3dmodel.js"></script>
         <div class="flexContainer">
             <div class="flexText">
             <h2>What is Initial D?</h2>
