Add log in functionality: create log_in.html, include log_in.js, and update navigation across multiple pages

--- a/eurobeat.html
+++ b/eurobeat.html
@@ -17,7 +17,7 @@
     <script src="scripts/menu.js"></script>
     <script src="scripts/randomquote.js"></script>
     <script src="scripts/dark_mode.js"></script>
-
+    <script src="scripts/log_in.js"></script>
 </head>
 <body>
     <header>
@@ -43,6 +43,8 @@
                 <li><a href="eurobeat.html">Eurobeat</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
+                <li><a href="log_in.html" id="loginInMenuEntry"></a></li>
+
                 <input type="button" value="Toggle Dark Mode" id="darkModeButton" onclick="toggleDarkMode()">
 
             </ul>
