--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="scripts/menu.js"></script>
     <script src="scripts/randomquote.js"></script>
     <script src="scripts/dark_mode.js"></script>
+    <script src="scripts/log_in.js"></script>
+
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
       {
@@ -50,6 +52,8 @@
             <li><a href="eurobeat.html">Eurobeat</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="sign_up.html">Sign Up</a></li>
+            <li><a href="log_in.html" id="loginInMenuEntry"></a></li>
+
             <input type="button" value="Toggle Dark Mode" id="darkModeButton" onclick="toggleDarkMode()">
         </ul>
     </nav>
