--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -16,6 +16,8 @@
     <script src="scripts/menu.js"></script>
     <script src="scripts/randomquote.js"></script>
     <script src="scripts/dark_mode.js"></script>
+    <script src="scripts/log_in.js"></script>
+
 
 </head>
 <body>
@@ -42,6 +44,8 @@
                 <li><a href="eurobeat.html">Eurobeat</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="sign_up.html">Sign Up</a></li>
+                <li><a href="log_in.html" id="loginInMenuEntry"></a></li>
+
                 <input type="button" value="Toggle Dark Mode" id="darkModeButton" onclick="toggleDarkMode()">
 
             </ul>
