Add welcome text feature and user authentication: implement welcome message display, user login functionality, and create users JSON data

--- a/eurobeat.html
+++ b/eurobeat.html
@@ -52,6 +52,7 @@
     </header>
     <main>
         <h1>Eurobeat - Initial D's Soundtrack</h1>
+        <div id="welcomeText"></div>
         <p>Eurobeat is a high-energy electronic music genre that plays a pivotal role in <i>Initial D</i>, amplifying
         the intensity of its iconic racing scenes and defining the anime's distinct atmosphere. Originating in Europe
         and gaining immense popularity in Japan, eurobeat is characterized by fast-paced beats, catchy melodies, and vibrant
