--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,10 @@
         </nav>
     </header>
     <main>
+        <div id="welcomeText"></div>
+
         <h1>Gallery - Initial D Pics and Vids</h1>
+
         <div class="gridContainer">
             <div class="gridElement">
                 <img src="assets/Images/ae86_rx7.jpg" alt="">
