--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="scripts/randomquote.js"></script>
     <script src="scripts/dark_mode.js"></script>
     <script src="scripts/log_in.js"></script>
+    
 
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
@@ -59,6 +60,7 @@
     </nav>
     </header>
     <main>
+        <div id="welcomeText"></div>
         <h1 class="card">Home</h1>
         <div id="3d-container"></div>
         <script type="module" src="scripts/3dmodel.js"></script>
