--- a/log_in.html
+++ b/log_in.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/sign_up.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
-    <script src="scripts/sign_up.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/randomquote.js"></script>
     <script src="scripts/dark_mode.js"></script>
@@ -51,9 +50,12 @@
         </nav>
     </header>
     <main>
+        <div id="welcomeText"></div>
+
         <h1>Log In</h1>
-        <div id="container">
-        
+        <div id="containerLogIn">
+
+        </div>
     </main>
     <footer>
         Page made by Marius Manea. All rights reserved to Initial D franchise.
