--- a/real_life_inspiration.html
+++ b/real_life_inspiration.html
@@ -52,6 +52,8 @@
         </nav>
     </header>
     <main>
+        <div id="welcomeText"></div>
+
         <h1>Inspiration from the Real World</h1>
 
         <p> &emsp;  &emsp; The following page delves into the fascinating real-life inspirations behind Initial D, 
