--- a/sign_up.html
+++ b/sign_up.html
@@ -52,6 +52,8 @@
         </nav>
     </header>
     <main>
+        <div id="welcomeText"></div>
+
         <h1>Sign Up</h1>
         <div id="container">
         <form target="_self" method="post" action="SignUp">
